@@ -10,7 +10,7 @@ role PDF::Action::GoTo
     # see [PDF 1.7 TABLE 8.49 Additional entries specific to a go-to action]
     use PDF::COS::Tie;
 
-    use PDF::Destination;
-    has PDF::Destination $.D is entry(:required, :alias<destination>);    #| (Required) The destination to jump to (see Section 8.2.1, “Destinations”).
+    use PDF::Destination :DestSpec, :coerce-dest;
+    has DestSpec $.D is entry(:required, :alias<destination>, :coerce(&coerce-dest));    #| (Required) The destination to jump to
 
 }
