@@ -1,5 +1,7 @@
 Release 0.1.9
-- Development of PDF::NameTree, PDF::NumberTree and PDF::FontFile
+- Development of PDF::NameTree, PDF::NumberTree, PDF::StructElem and PDF::FontFile
+- Further development and use of PDF::Destination. Handle
+  both explicit and named destinations.
 Release 0.1.8
 - Add classess:
   -- PDF::OCG (Optional Content Groups)
